==========================================================
The current maintainer of this library is the
RIPE NCC Global Information Infrastructure department.

You can reach us at https://bitbucket.org/ripencc/bgpdump

PLEASE DO NOT E-MAIL INDIVIDUAL DEVELOPERS ABOUT
ISSUES, AS YOUR E-MAIL MAY BE LOST
==========================================================

2020-04-27 Colin Petrie <colin@spakka.net> v1.6.1
	* Version bump for Github release/tag migration

2019-04-28 Robert Scheck <robert@fedoraproject.org>
	* Use $(DESTDIR), $(INSTALL) and $(LDFLAGS) for downstreams
	* Correct permissions for installed header files (*.h)

2019-03-06 Kevin White <bitbucket-kevin@kevbo.org>
	* Update Makefile.in to use $(DESTDIR) in the install stanza
	* Transistion spec file to use %make_install, rather than %makeinstall
	* Update spec file to move the static library to the -devel package

2019-02-09 Italo Cunha <cunha@dcc.ufmg.br>
	* Add '-u' flag to print unknown attributes in oneline (-m) mode

2018-09-26 Colin Petrie <cpetrie@ripe.net> v1.6.0
	* Fix overflow for large records
	* Add basic '-q' quiet mode
	* fix off-by-one in peer index assert
	* fix MyAS handling in open message
	* version bump as structs have new fields and sizes,
	  apps should be recompiled

2017-01-15 Colin Petrie <cpetrie@ripe.net>
	* Add support for BGP Large Communities

2016-09-15 Colin Petrie <cpetrie@ripe.net> v1.5.0
	* Many security fixes, crashes, segfaults, memory leaks fixed.
	* Many fixes provided by Christoph Biedl from Debian port
	* Fuzzed inputs, hints and ideas provided by Guillaume Valadon
	* Thread-safety fixes from CAIDA/bgpstream version of bgpdump
	* version bump as new fields have been added to structs, apps
	  should be recompiled

2015-11-05 Colin Petrie <cpetrie@ripe.net>
	* Adding support for draft-petrie-grow-mrt-add-paths
	  Note that this adds various output format changes, when reading messages
	  with Add-path Path-IDs in them, there are extra columns and fields in